--- a/css/main.css
+++ b/css/main.css
@@ -46,18 +46,23 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	height: 110px;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 	display: flex;
   	justify-content: center;
   	align-items: center;
 	flex-flow: row wrap;
+	width: 100%;
 }
 
 header h1 {
+	border-bottom: 3px solid #77a466;
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
 	margin: 0;
 	padding: 38px 0;
+	width: 100%;
 }
 header h1 span {
 	color: #77a466;
@@ -65,6 +70,7 @@ header h1 span {
 
 header nav {
 	padding: 46px 0;
+	width: 100%;
 }
 header nav ul {
 	margin: 0;
@@ -74,9 +80,13 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
+	margin: 25px;
 	padding: 0 10px;
-	display: inline;
+	list-style-type: none;
+	display: flex;
+  	justify-content: center;
 }
+
 header nav ul li a{
 	text-decoration: none;
 	color:#77a466;
@@ -116,7 +126,7 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	width: 33%;
+	width: 100%;
 	border-top: 1px solid #eee;
 }
 
@@ -163,6 +173,7 @@ footer {
   	justify-content: center;
   	align-items: center;
 	flex-flow: row wrap;
+	width: 100%;
 }
 footer span {
 	font-family: 'Galada', cursive;
